# work_tock

./: Cargo.toml  readme.md
src/: clock.pest  clockin.rs  err.rs  gob.rs  lib.rs  main.rs  parse.rs  pesto.rs  s_time.rs
test_data/: conf1.lz  demo1.wt  empty.txt  test2.md  times1.bak  times1.tm
