[package]
name = "work_tock"
description = "A Program to track your hours across various projects"
version = "0.1.3"
authors = ["storyfeet <thebeaky@psmail.net>"]
edition = "2018"
keywords = ["clockin","work","timesheet"]
license = "MIT"
repository = "https://github.com/storyfeet/work_tock"

[dependencies]
lazy_conf = "0.1.1"
chrono = "0.4.6"
derive_more = "0.13.0"
clap_conf = {path="../../mlibs/clap_conf/"}

pest = "2.0"
pest_derive = "2.0"
num = "0.2"
