[package]
name = "work_tock"
description = "A Program to track your hours across various projects"
version = "0.1.8"
authors = ["storyfeet <thebeaky@psmail.net>"]
edition = "2018"
keywords = ["clockin","work","timesheet","hours","tracker"]
license = "MIT"
repository = "https://github.com/storyfeet/work_tock"
readme = "readme.md"

[lib]
name = "work_tock_lib"
path = "src/lib.rs"

[[bin]]
name = "work_tock"
path = "src/main.rs"



[dependencies]
lazy_conf = "0.1.1"
chrono = "0.4.6"
derive_more = "0.13.0"
clap_conf = "0.1.2"
failure = "0.1.5"
failure_derive = "0.1.5"

pest = "2.1.0"
pest_derive = "2.1.0"
num = "0.2"
#num-derive = "0.2.5"
